# peervault

./: .envrc  .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  README.md  RELEASING.md  ROADMAP.md  esbuild.config.mjs  flake.nix  justfile  manifest.json  package-lock.json  package.json  styles.css  tsconfig.json  versions.json
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: pxk3a476g85fbkvjh6mypcw9lv6hbm9y-source  yva1f94isw5gz8hff7ciksq687j1sxbz-source
.github/workflows/: ci.yml  release-daemon.yml
docker/e2e/: Dockerfile  README.md  docker-compose.generated.yml  docker-compose.scale.yml  docker-compose.yml  e2e.sh  entrypoint.sh  generate-compose.sh  obsidian-config.json  supervisord.conf
docker/e2e/client/: Dockerfile  accept-trust-dialog.json  cdp-forwarder.sh  entrypoint.sh  init-vault.sh  obsidian-cdp-wrapper.sh
docker/e2e/relay/: Dockerfile
docs/: EMBEDDING.md  PROTOCOL-SPEC.md  REVIEW-FOLLOWUPS.md  architecture.md  mobile-wasm-compatibility.md  troubleshooting.md  wasm-build.md
e2e/: README.md  TESTING.md  config.ts  debug-session-state.ts  runner.ts  scaled-runner.ts
e2e/debug-output/00-setup-Reinstall_TEST2_plugin_with_fresh_code-2026-02-13T16-34-01-768Z/: error.txt
e2e/debug-output/00-setup-Reinstall_TEST2_plugin_with_fresh_code-2026-02-13T18-07-01-653Z/: console-logs.json  diagnostics.json
e2e/debug-output/00-setup-Reinstall_TEST_plugin_with_fresh_code-2026-02-11T02-20-15-686Z/: diagnostics.json
e2e/debug-output/00-setup-Reinstall_TEST_plugin_with_fresh_code-2026-02-13T16-34-01-174Z/: diagnostics.json  error.txt
e2e/debug-output/00-setup-Reinstall_TEST_plugin_with_fresh_code-2026-02-13T18-07-01-009Z/: console-logs.json  diagnostics.json
e2e/debug-output/01-pairing-Add_peer_to_TEST2_using_ticket-2026-02-10T05-39-23-480Z/: diagnostics.json
e2e/debug-output/01-pairing-Add_peer_to_TEST2_using_ticket-2026-02-10T05-40-23-408Z/: diagnostics.json  error.txt
e2e/debug-output/01-pairing-Add_peer_to_TEST2_using_ticket-2026-02-11T00-04-10-882Z/: console-logs.json  error.txt
e2e/debug-output/01-pairing-Add_peer_to_TEST2_using_ticket-2026-02-11T00-06-54-955Z/: console-logs.json  diagnostics.json  error.txt
e2e/debug-output/01-pairing-Add_peer_to_TEST2_using_ticket-2026-02-11T02-22-20-276Z/: console-logs.json  diagnostics.json
e2e/debug-output/01-pairing-Add_peer_to_TEST2_using_ticket-2026-02-11T02-31-29-857Z/: console-logs.json  diagnostics.json
e2e/debug-output/01-pairing-Add_peer_to_TEST2_using_ticket-2026-02-11T02-36-29-618Z/: console-logs.json
e2e/debug-output/01-pairing-Add_peer_to_TEST2_using_ticket-2026-02-11T02-39-49-634Z/: console-logs.json  (+2 more)
e2e/lib/: assertions.ts  brat.ts  cdp-client.ts  cdp-discovery.ts  context.ts  fixtures.ts  index.ts  isolation-manager.ts  plugin-api.ts  plugin-lifecycle.ts  scaled-context.ts  state-manager.ts  state-validator.ts  sync-waiter.ts  test-utils.ts  vault-controller.ts
hosts/peervaultd/: Cargo.toml
hosts/peervaultd/src/: main.rs
hosts/vscode/: .vscodeignore  LICENSE  README.md  esbuild.mjs  package.json  tsconfig.json
hosts/zed/: Cargo.toml  README.md  extension.toml
peervault-core/: Cargo.toml
peervault-core/src/: blob.rs  blobs_bridge.rs  crypto.rs  error.rs  events.rs  gossip_bridge.rs  host.rs  key_exchange.rs  keys.rs  lib.rs  pairing.rs  peer.rs  protocol.rs  rt.rs  runner.rs  session.rs  sync.rs  sync_handler.rs  transport.rs  vault.rs  wasm.rs  wasm_transport.rs  wire.rs
peervault-core/src/cloud/: encryption.rs  mod.rs  s3_client.rs  sync.rs  types.rs
peervault-core/src/net/: mod.rs  peer.rs  sync_runner.rs  transport.rs
peervault-core/src/store/: loro_store.rs  mod.rs
peervault-core/tests/: cloud_minio.rs  delete_repro.rs  native_embed.rs  sync_integration.rs  sync_property.rs  sync_stress.rs  wasm_basic.rs
peervault-iroh/: Cargo.toml  build.sh
peervault-iroh/src/: lib.rs
spec/: 00-overview.md  01-data-model.md  02-storage.md  03-file-watcher.md  04-sync-protocol.md  05-transport-iroh.md  06-peer-management.md  07-plugin-ui.md  08-testing.md  09-error-handling.md  10-security.md  11-performance.md  12-migration.md  13-plugin-development.md  14-binary-files.md  15-peer-groups.md  architecture-plan.md
specs/: README.md  sync_protocol.cfg  sync_protocol.tla  sync_protocol_v2.cfg  sync_protocol_v2.tla  sync_protocol_v3.cfg  sync_protocol_v3.tla  sync_protocol_v4.cfg  sync_protocol_v4.tla  sync_protocol_v5.cfg  sync_protocol_v5.tla
src/: main.ts  types.ts
src/cloud/: cloud-sync.ts  index.ts  s3-client.ts  types.ts
src/core/: blob-store.ts  conflict-tracker.ts  document-manager.ts  encrypted-storage-adapter.ts  index.ts  peer-vault-client.ts  storage-adapter.ts  vault-sync.ts
src/crypto/: encryption.ts  index.ts
src/errors/: base.ts  catalog.ts  index.ts  types.ts
src/peer/: index.ts  peer-manager.ts  types.ts
src/sync/: index.ts  messages.ts  sync-session.ts  types.ts
src/transport/: hybrid-transport.ts  index.ts  iroh-transport.ts  mock-transport.ts  types.ts
src/types/: obsidian-internal.d.ts
src/ui/: add-device-modal.ts  confirm-modal.ts  conflict-modal.ts  connection-status.ts  encryption-modal.ts  file-history-modal.ts  group-modal.ts  index.ts  merge-notification.ts  pairing-modal.ts  selective-sync-modal.ts  settings-tab.ts  status-icons.ts  status-modal.ts
src/utils/: device.ts  events.ts  index.ts  logger.ts  protocol-tracer.ts  text-diff.ts  validation.ts
tests/: blob-store.test.ts  conflict-tracker.test.ts  crypto.test.ts  device.test.ts  document-manager.test.ts  e2e-sync.test.ts  encryption.test.ts  encryption.test.ts.disabled  errors.test.ts  events.test.ts  garbage-collector.test.ts  hybrid-transport.test.ts  iroh-transport.test.ts  logger.test.ts  migration.test.ts  mock-transport.test.ts  peer-groups.test.ts  peer-manager.test.ts  storage-adapter.test.ts  sync-messages.test.ts  sync-session.test.ts  text-diff.test.ts  validation.test.ts  vault-sync.test.ts  webrtc-connection.test.ts  webrtc-signaling.test.ts  webrtc-transport.test.ts
(+409 files in other folders)
