[package]
name = "peervault-core"
version = "0.1.0"
edition = "2021"
description = "Portable P2P document sync core - embeddable in any host application"
license = "MIT OR Apache-2.0"
repository = "https://github.com/robcohen/peervault"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[features]
default = ["native"]
native = ["tokio/rt-multi-thread", "reqwest/rustls"]
test-utils = []  # Exposes MockHost for integration tests
# Note: In WASM, reqwest uses browser fetch API automatically
# WASM target for browser/JS embedding
wasm = [
    "wasm-bindgen",
    "wasm-bindgen-futures",
    "js-sys",
    "web-sys",
    "getrandom_02",
    "getrandom",
    "console_error_panic_hook",
    "n0-future",
    "tracing-subscriber",
    "tracing-subscriber-wasm",
    "serde-wasm-bindgen",
]

[dependencies]
# Async runtime - minimal features for WASM compatibility
tokio = { version = "1", default-features = false, features = ["sync"] }

# Iroh networking (P2P transport)
# Use default-features = false for WASM compatibility
# tls-ring gives the ring crypto provider needed by the endpoint presets, without
# the native-code default features (portmapper/fast-apple-datapath) that break WASM.
iroh = { version = "1.0", default-features = false, features = ["tls-ring"] }
iroh-tickets = { version = "1.0", default-features = false }
iroh-blobs = { version = "0.103", default-features = false }
iroh-gossip = { version = "0.101", default-features = false, features = ["net"] }

# Loro CRDT - high-performance collaborative data structures
loro = "1.10"

# Crypto
chacha20poly1305 = "0.10"
sha2 = "0.10"
hmac = "0.12"  # For AWS Signature V4
hkdf = "0.12"
argon2 = "0.5"  # Memory-hard passphrase KDF
zeroize = { version = "1", features = ["derive"] }  # Wipe key material on drop
rand = "0.10"

# ECIES for key exchange (replaces manual x25519 + HKDF + encrypt)
# Uses x25519 curve with XChaCha20-Poly1305, pure Rust for WASM
ecies = { version = "0.2", default-features = false, features = ["x25519", "xchacha20"] }

# HTTP client (for S3) - works in both native and WASM
reqwest = { version = "0.13", default-features = false, features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# NOTE: kept at 1.x deliberately. bincode 2/3 change the default wire encoding and
# restructured serde support (3.0 dropped the `serde` feature). Upgrading touches the
# V3 sync wire format and must be done with a cross-version compatibility test under
# the Docker e2e, not as a blind bump.
bincode = "1"

# Hex encoding
hex = "0.4"

# URL encoding (for S3 queries)
urlencoding = "2"

# Base64 encoding (for tickets)
base64 = "0.22"

# Async utilities
futures = "0.3"

# Time - web-time works in both native and WASM
web-time = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"

# WASM bindings (optional). Must match the wasm-bindgen-cli used by `just wasm`
# (wasm-pack fetches the matching CLI). Bumped for iroh 1.0 (needs js-sys 0.3.83+).
wasm-bindgen = { version = "0.2.108", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", optional = true, features = [
    "Crypto",
    "Window",
    "console",
] }
# getrandom 0.2 for our code
getrandom_02 = { package = "getrandom", version = "0.2", optional = true, features = ["js"] }
# getrandom 0.3 for dependencies (iroh etc)
getrandom = { version = "0.3", optional = true, features = ["wasm_js"] }
# Better panic messages in WASM
console_error_panic_hook = { version = "0.1", optional = true }
# Async utilities for WASM
n0-future = { version = "0.3", optional = true }
# Logging for WASM
tracing-subscriber = { version = "0.3", optional = true, features = ["env-filter"] }
tracing-subscriber-wasm = { version = "0.1", optional = true }
# WASM serialization helpers
serde-wasm-bindgen = { version = "0.6", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "test-util"] }
wasm-bindgen-test = "0.3"
