[package]
name = "peervault-iroh"
version = "0.1.0"
edition = "2021"
description = "WASM bindings for Iroh P2P networking in PeerVault"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Iroh for P2P networking
iroh = "0.95"

# WASM bindings
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }

# Random number generation in WASM
getrandom = { version = "0.3", features = ["wasm_js"] }
rand = "0.9"

# Async runtime for WASM
tokio = { version = "1", features = ["sync", "io-util"] }

# Error handling and panic info
console_error_panic_hook = "0.1"

# Serialization for NodeAddr
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-wasm = "0.2"

[profile.release]
opt-level = "s"     # Optimize for size
lto = true          # Link-time optimization
